# TDT4200_assignment1

TDT4200_assignment1/: .gitignore  CMakeLists.txt  README.md  bitmap.c  bitmap.h  main.c
TDT4200_assignment1/src/: bitmap.c  bitmap.h  main.c
src/: bitmap.h
